tests/NormalTests/paczka2/big_fuzzy/70099522.err
Error in line 1: U3uQV8q S456 53,7
Error in line 10: 9wGR8 A26 97,7
Error in line 14: U3uQV8q S953 41,1
Error in line 22: 9wGR/ S456 67,3
Error in line 12: VcP S953 71,6
Error in line 24: 8dW A26 9,5
Error in line 53: 9wGR8 S69 55,2
Error in line 55: 9wGR8 S456 68,7
Error in line 69: U3uQV8q S456 46,1
Error in line 57: OHZw1lM S456 166,6
Error in line 71: OHZw1lM S69 45,7
Error in line 70: U3uQV8q A26 0,6
Error in line 65: UbukCmtg A26 11,6
Error in line 82: 9wGR8 S9 80,
Error in line 76: 9wGR8 S456 21,3
Error in line 84: 9wGR8 S69 125,7
Error in line 86: 8dW S953 14,9
Error in line 88: 9wGR8 S456 74,7
Error in line 89: 8dW A26 69,9
Error in line 90: 9wGR8 A26 67,7
Error in line 83: OHZw1lM S69 12,8
Error in line 103: UbukCmtg S456 3,5
Error in line 104: UbukCmtg S953 29,2
Error in line 91: 8dW S953 59,4
Error in line 114: 8dW S456 50,5
Error in line 115: S456 A26 4,4
Error in line 121: 8dW S69 74,2
Error in line 118: S456 S69 7,7
Error in line 125: S456 S953 60,0
Error in line 127: S456 S456 37,9
Error in line 124: VcP A26 27,2
Error in line 141: S456 S69 65,7
Error in line 154: S456 A26 1,6
Error in line 160: S456 S456 91,7
Error in line 159: 9wGR8 A26 14,8
Error in line 162: S456 S69 58,2
Error in line 174: 8dW A26 63,9
Error in line 177: UbukCmtg S953 98,8
Error in line 175: S456 S456 99,0
Error in line 176: 8dW S69 80,1
Error in line 179: S456 S69 17,9
Error in line 189: 8dW S456 66,0
Error in line 192: 8dW A26 31,8
Error in line 191: VcP S953 75,7
Error in line 199: VcP A26 94,1
Error in line 214: OHZw1lM S69 83,25
Error in line 202: UbukCmtg S953 52,2
Error in line 218: VcP Sg56 19,8
Error in line 207: 8dW S69 2,2
Error in line 212: VcP S456 5,2
Error in line 231: 8dW A26 98,5
Error in line 235: U3uQV8q S69 91,0
Error in line 243: S456 S456 73,1
